compiler/synt_analyzer.output
Terminals unused in grammar

    FIELD
    PARAM
    SETPARAM
    DELEGATE
    INTERFACE
    OBJECT
    PROPERTY
    DYNAMIC
    ENUM
    SEALED
    SUSPEND
    INNER
    EXTERNAL
    ACTUAL
    ANNOTATION
    GET
    SET
    RECEIVER
    BY
    COMPANION
    LATEINIT
    VARARG
    TYPEOF
    WHERE
    WHEN
    AS
    OUT
    DATA
    TAILREC
    OPERATOR
    INLINE
    NOINLINE
    CROSSINLINE
    REIFIED
    EXPECT
    INFIX
    CONST


State 25 conflicts: 1 shift/reduce
State 26 conflicts: 2 shift/reduce
State 45 conflicts: 1 shift/reduce
State 46 conflicts: 2 shift/reduce
State 61 conflicts: 1 shift/reduce
State 62 conflicts: 2 shift/reduce
State 63 conflicts: 1 shift/reduce
State 64 conflicts: 2 shift/reduce
State 65 conflicts: 1 shift/reduce
State 66 conflicts: 2 shift/reduce
State 69 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 93 conflicts: 2 shift/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 2 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 2 shift/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 2 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 2 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 2 shift/reduce
State 161 conflicts: 1 shift/reduce
State 167 conflicts: 1 shift/reduce
State 168 conflicts: 2 shift/reduce
State 169 conflicts: 1 shift/reduce
State 170 conflicts: 2 shift/reduce
State 237 conflicts: 1 shift/reduce
State 238 conflicts: 2 shift/reduce
State 239 conflicts: 1 shift/reduce
State 240 conflicts: 2 shift/reduce
State 246 conflicts: 1 shift/reduce
State 247 conflicts: 1 shift/reduce
State 317 conflicts: 1 shift/reduce
State 318 conflicts: 2 shift/reduce
State 354 conflicts: 1 shift/reduce
State 375 conflicts: 1 shift/reduce
State 382 conflicts: 1 shift/reduce
State 384 conflicts: 1 shift/reduce
State 385 conflicts: 1 shift/reduce
State 450 conflicts: 1 shift/reduce
State 451 conflicts: 1 shift/reduce
State 464 conflicts: 1 shift/reduce
State 465 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: semis
    2        | newLines
    3        | class
    4        | method
    5        | valDeclaration semis
    6        | varDeclaration semis
    7        | visibilityModifier valDeclaration semis
    8        | visibilityModifier varDeclaration semis
    9        | valDeclaration newLines
   10        | varDeclaration newLines
   11        | visibilityModifier valDeclaration newLines
   12        | visibilityModifier varDeclaration newLines
   13        | program class
   14        | program method
   15        | program valDeclaration semis
   16        | program varDeclaration semis
   17        | program visibilityModifier valDeclaration semis
   18        | program visibilityModifier varDeclaration semis
   19        | program valDeclaration newLines
   20        | program varDeclaration newLines
   21        | program visibilityModifier valDeclaration newLines
   22        | program visibilityModifier varDeclaration newLines
   23        | program semis
   24        | program newLines

   25 class: modifiers CLASS ID ':' ID '{' classBody '}'
   26      | modifiers CLASS ID '{' classBody '}'
   27      | CLASS ID ':' ID '{' classBody '}'
   28      | CLASS ID '{' classBody '}'
   29      | modifiers CLASS ID ':' ID '{' '}'
   30      | modifiers CLASS ID '{' '}'
   31      | CLASS ID ':' ID '{' '}'
   32      | CLASS ID '{' '}'

   33 classBody: semis
   34          | newLines
   35          | method
   36          | property semis
   37          | property newLines
   38          | constructor
   39          | initializer
   40          | classBody method
   41          | classBody property semis
   42          | classBody property newLines
   43          | classBody constructor
   44          | classBody initializer
   45          | classBody semis
   46          | classBody newLines

   47 property: modifiers valDeclaration
   48         | modifiers varDeclaration
   49         | valDeclaration
   50         | varDeclaration

   51 method: modifiers funcDeclaration semis
   52       | modifiers funcDeclaration newLines
   53       | modifiers func
   54       | funcDeclaration semis
   55       | funcDeclaration newLines
   56       | func

   57 initializer: INIT block

   58 constructor: visibilityModifier CONSTRUCTOR '(' optFormalParams ')' block
   59            | visibilityModifier CONSTRUCTOR '(' optFormalParams ')'
   60            | visibilityModifier CONSTRUCTOR '(' optFormalParams ')' ':' SUPER '(' optFactParams ')'
   61            | visibilityModifier CONSTRUCTOR '(' optFormalParams ')' ':' THIS '(' optFactParams ')'
   62            | visibilityModifier CONSTRUCTOR '(' optFormalParams ')' ':' SUPER '(' optFactParams ')' block
   63            | visibilityModifier CONSTRUCTOR '(' optFormalParams ')' ':' THIS '(' optFactParams ')' block
   64            | CONSTRUCTOR '(' optFormalParams ')' block
   65            | CONSTRUCTOR '(' optFormalParams ')'
   66            | CONSTRUCTOR '(' optFormalParams ')' ':' SUPER '(' optFactParams ')'
   67            | CONSTRUCTOR '(' optFormalParams ')' ':' THIS '(' optFactParams ')'
   68            | CONSTRUCTOR '(' optFormalParams ')' ':' SUPER '(' optFactParams ')' block
   69            | CONSTRUCTOR '(' optFormalParams ')' ':' THIS '(' optFactParams ')' block

   70 optFormalParams: %empty
   71                | formalParams

   72 formalParams: ID ':' type
   73             | formalParams ',' ID ':' type

   74 modifiers: OVERRIDE
   75          | visibilityModifier
   76          | inheritanceModifier
   77          | ABSTRACT
   78          | OVERRIDE visibilityModifier
   79          | OVERRIDE inheritanceModifier
   80          | OVERRIDE ABSTRACT
   81          | visibilityModifier OVERRIDE
   82          | visibilityModifier inheritanceModifier
   83          | visibilityModifier ABSTRACT
   84          | inheritanceModifier OVERRIDE
   85          | inheritanceModifier visibilityModifier
   86          | inheritanceModifier ABSTRACT
   87          | ABSTRACT OVERRIDE
   88          | ABSTRACT visibilityModifier
   89          | ABSTRACT inheritanceModifier
   90          | OVERRIDE visibilityModifier inheritanceModifier
   91          | OVERRIDE visibilityModifier ABSTRACT
   92          | OVERRIDE inheritanceModifier visibilityModifier
   93          | OVERRIDE inheritanceModifier ABSTRACT
   94          | OVERRIDE ABSTRACT visibilityModifier
   95          | OVERRIDE ABSTRACT inheritanceModifier
   96          | visibilityModifier OVERRIDE inheritanceModifier
   97          | visibilityModifier OVERRIDE ABSTRACT
   98          | visibilityModifier inheritanceModifier OVERRIDE
   99          | visibilityModifier inheritanceModifier ABSTRACT
  100          | visibilityModifier ABSTRACT inheritanceModifier
  101          | visibilityModifier ABSTRACT OVERRIDE
  102          | inheritanceModifier OVERRIDE visibilityModifier
  103          | inheritanceModifier OVERRIDE ABSTRACT
  104          | inheritanceModifier visibilityModifier ABSTRACT
  105          | inheritanceModifier visibilityModifier OVERRIDE
  106          | inheritanceModifier ABSTRACT visibilityModifier
  107          | inheritanceModifier ABSTRACT OVERRIDE
  108          | ABSTRACT OVERRIDE inheritanceModifier
  109          | ABSTRACT OVERRIDE visibilityModifier
  110          | ABSTRACT visibilityModifier OVERRIDE
  111          | ABSTRACT visibilityModifier inheritanceModifier
  112          | ABSTRACT inheritanceModifier OVERRIDE
  113          | ABSTRACT inheritanceModifier visibilityModifier
  114          | OVERRIDE visibilityModifier inheritanceModifier ABSTRACT
  115          | OVERRIDE visibilityModifier ABSTRACT inheritanceModifier
  116          | OVERRIDE inheritanceModifier visibilityModifier ABSTRACT
  117          | OVERRIDE inheritanceModifier ABSTRACT visibilityModifier
  118          | OVERRIDE ABSTRACT visibilityModifier inheritanceModifier
  119          | OVERRIDE ABSTRACT inheritanceModifier visibilityModifier
  120          | visibilityModifier OVERRIDE inheritanceModifier ABSTRACT
  121          | visibilityModifier OVERRIDE ABSTRACT inheritanceModifier
  122          | visibilityModifier inheritanceModifier OVERRIDE ABSTRACT
  123          | visibilityModifier inheritanceModifier ABSTRACT OVERRIDE
  124          | visibilityModifier ABSTRACT inheritanceModifier OVERRIDE
  125          | visibilityModifier ABSTRACT OVERRIDE inheritanceModifier
  126          | inheritanceModifier OVERRIDE visibilityModifier ABSTRACT
  127          | inheritanceModifier OVERRIDE ABSTRACT visibilityModifier
  128          | inheritanceModifier visibilityModifier ABSTRACT OVERRIDE
  129          | inheritanceModifier visibilityModifier OVERRIDE ABSTRACT
  130          | inheritanceModifier ABSTRACT visibilityModifier OVERRIDE
  131          | inheritanceModifier ABSTRACT OVERRIDE visibilityModifier
  132          | ABSTRACT OVERRIDE inheritanceModifier visibilityModifier
  133          | ABSTRACT OVERRIDE visibilityModifier inheritanceModifier
  134          | ABSTRACT visibilityModifier OVERRIDE inheritanceModifier
  135          | ABSTRACT visibilityModifier inheritanceModifier OVERRIDE
  136          | ABSTRACT inheritanceModifier OVERRIDE visibilityModifier
  137          | ABSTRACT inheritanceModifier visibilityModifier OVERRIDE

  138 visibilityModifier: PUBLIC
  139                   | PRIVATE
  140                   | INTERNAL
  141                   | PROTECTED

  142 inheritanceModifier: FINAL
  143                    | OPEN

  144 func: funcDeclaration block
  145     | funcDeclaration '=' expr

  146 funcDeclaration: FUN ID '(' optFormalParams ')' ':' type

  147 block: optNewLines '{' semis stmts '}'
  148      | optNewLines '{' semis '}'
  149      | optNewLines '{' stmts '}'
  150      | optNewLines '{' newLines stmts '}'
  151      | optNewLines '{' newLines '}'
  152      | optNewLines '{' '}'

  153 varDeclaration: VAR ID ':' type
  154               | VAR ID ':' type '=' expr
  155               | VAR '(' formalParams ')' '=' expr

  156 valDeclaration: VAL ID ':' type
  157               | VAL ID ':' type '=' expr
  158               | VAL '(' formalParams ')' '=' expr

  159 type: optNewLines ID optNewLines
  160     | optNewLines templateType optNewLines

  161 templateType: ID '<' type_seq '>'

  162 type_seq: ID
  163         | templateType
  164         | type_seq ',' ID
  165         | type_seq ',' templateType

  166 stmts: stmt
  167      | stmts stmt

  168 stmt: valDeclaration semis
  169     | varDeclaration semis
  170     | assignment semis
  171     | whileLoop
  172     | doWhileLoop semis
  173     | forLoop
  174     | ifStmt
  175     | expr semis
  176     | BREAK semis
  177     | CONTINUE semis
  178     | RETURN semis
  179     | RETURN expr semis
  180     | valDeclaration newLines
  181     | varDeclaration newLines
  182     | assignment newLines
  183     | doWhileLoop newLines
  184     | expr newLines
  185     | BREAK newLines
  186     | CONTINUE newLines
  187     | RETURN newLines
  188     | RETURN expr newLines

  189 expr: STR
  190     | ID
  191     | THIS
  192     | ID '(' optFactParams ')'
  193     | INT
  194     | FLOAT
  195     | CHR
  196     | DOUBLE
  197     | BOOLEAN
  198     | '(' expr ')'
  199     | '!' expr
  200     | '+' expr
  201     | '-' expr
  202     | expr '+' expr
  203     | expr '-' expr
  204     | expr '*' expr
  205     | expr '/' expr
  206     | expr '%' expr
  207     | expr '<' expr
  208     | expr '>' expr
  209     | expr OR expr
  210     | expr AND expr
  211     | expr EQ expr
  212     | expr AEQ expr
  213     | expr NEQ expr
  214     | expr NAEQ expr
  215     | expr LOEQ expr
  216     | expr MOEQ expr
  217     | expr '.' ID
  218     | expr '.' ID '(' optFactParams ')'
  219     | expr '[' expr ']'
  220     | SUPER '.' ID
  221     | SUPER '.' ID '(' optFactParams ')'
  222     | expr RANGE expr

  223 optFactParams: %empty
  224              | factParams

  225 factParams: expr
  226           | factParams ',' expr

  227 assignment: expr '=' expr
  228           | expr ASUM expr
  229           | expr ASUB expr
  230           | expr ADIV expr
  231           | expr AMUL expr
  232           | expr AMOD expr

  233 whileLoop: WHILE '(' expr ')' stmt
  234          | WHILE '(' expr ')' block semis
  235          | WHILE '(' expr ')' semis
  236          | WHILE '(' expr ')' block newLines
  237          | WHILE '(' expr ')' newLines

  238 doWhileLoop: DO expr WHILE '(' expr ')'
  239            | DO block WHILE '(' expr ')'
  240            | DO WHILE '(' expr ')'

  241 forLoop: FOR '(' ID ':' type IN expr ')' stmt
  242        | FOR '(' ID ':' type IN expr ')' block semis
  243        | FOR '(' ID ':' type IN expr ')' semis
  244        | FOR '(' '(' formalParams ')' IN expr ')' stmt
  245        | FOR '(' '(' formalParams ')' IN expr ')' block semis
  246        | FOR '(' '(' formalParams ')' IN expr ')' semis
  247        | FOR '(' ID ':' type IN expr ')' block newLines
  248        | FOR '(' ID ':' type IN expr ')' newLines
  249        | FOR '(' '(' formalParams ')' IN expr ')' block newLines
  250        | FOR '(' '(' formalParams ')' IN expr ')' newLines

  251 ifStmt: IF '(' expr ')' stmt
  252       | IF '(' expr ')' semis
  253       | IF '(' expr ')' block semis
  254       | IF '(' expr ')' expr ELSE stmt
  255       | IF '(' expr ')' stmt ELSE stmt
  256       | IF '(' expr ')' block ELSE stmt
  257       | IF '(' expr ')' semis ELSE stmt
  258       | IF '(' expr ')' expr ELSE block semis
  259       | IF '(' expr ')' stmt ELSE block semis
  260       | IF '(' expr ')' block ELSE block semis
  261       | IF '(' expr ')' semis ELSE block semis
  262       | IF '(' expr ')' expr ELSE semis
  263       | IF '(' expr ')' stmt ELSE semis
  264       | IF '(' expr ')' block ELSE semis
  265       | IF '(' expr ')' newLines
  266       | IF '(' expr ')' block newLines
  267       | IF '(' expr ')' newLines ELSE stmt
  268       | IF '(' expr ')' expr ELSE block newLines
  269       | IF '(' expr ')' stmt ELSE block newLines
  270       | IF '(' expr ')' block ELSE block newLines
  271       | IF '(' expr ')' newLines ELSE block newLines
  272       | IF '(' expr ')' expr ELSE newLines
  273       | IF '(' expr ')' stmt ELSE newLines
  274       | IF '(' expr ')' block ELSE newLines

  275 optNewLines: %empty
  276            | newLines

  277 newLines: NEW_LINE
  278         | newLines NEW_LINE

  279 semis: ';'
  280      | semis ';'
  281      | semis newLines


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 199
    '%' (37) 206
    '(' (40) 58 59 60 61 62 63 64 65 66 67 68 69 146 155 158 192 198 218 221 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256 257 258 259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274
    ')' (41) 58 59 60 61 62 63 64 65 66 67 68 69 146 155 158 192 198 218 221 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256 257 258 259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274
    '*' (42) 204
    '+' (43) 200 202
    ',' (44) 73 164 165 226
    '-' (45) 201 203
    '.' (46) 217 218 220 221
    '/' (47) 205
    ':' (58) 25 27 29 31 60 61 62 63 66 67 68 69 72 73 146 153 154 156 157 241 242 243 247 248
    ';' (59) 279 280
    '<' (60) 161 207
    '=' (61) 145 154 155 157 158 227
    '>' (62) 161 208
    '[' (91) 219
    ']' (93) 219
    '{' (123) 25 26 27 28 29 30 31 32 147 148 149 150 151 152
    '}' (125) 25 26 27 28 29 30 31 32 147 148 149 150 151 152
    error (256)
    NEW_LINE (258) 277 278
    ID <IdOrString> (259) 25 26 27 28 29 30 31 32 72 73 146 153 154 156 157 159 161 162 164 190 192 217 218 220 221 241 242 243 247 248
    STR <IdOrString> (260) 189
    CLASS (261) 25 26 27 28 29 30 31 32
    PUBLIC (262) 138
    PRIVATE (263) 139
    PROTECTED (264) 141
    FIELD (265)
    PARAM (266)
    SETPARAM (267)
    DELEGATE (268)
    INTERFACE (269)
    OBJECT (270)
    PROPERTY (271)
    DYNAMIC (272)
    ENUM (273)
    SEALED (274)
    SUSPEND (275)
    INNER (276)
    EXTERNAL (277)
    ACTUAL (278)
    ANNOTATION (279)
    GET (280)
    SET (281)
    RECEIVER (282)
    CONSTRUCTOR (283) 58 59 60 61 62 63 64 65 66 67 68 69
    BY (284)
    COMPANION (285)
    INIT (286) 57
    LATEINIT (287)
    VARARG (288)
    THIS (289) 61 63 67 69 191
    SUPER (290) 60 62 66 68 220 221
    INTERNAL (291) 140
    OVERRIDE (292) 74 78 79 80 81 84 87 90 91 92 93 94 95 96 97 98 101 102 103 105 107 108 109 110 112 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137
    ABSTRACT (293) 77 80 83 86 87 88 89 91 93 94 95 97 99 100 101 103 104 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137
    FUN (294) 146
    VAR (295) 153 154 155
    VAL (296) 156 157 158
    TYPEOF (297)
    IF (298) 251 252 253 254 255 256 257 258 259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274
    ELSE (299) 254 255 256 257 258 259 260 261 262 263 264 267 268 269 270 271 272 273 274
    WHERE (300)
    WHEN (301)
    DO (302) 238 239 240
    WHILE (303) 233 234 235 236 237 238 239 240
    FOR (304) 241 242 243 244 245 246 247 248 249 250
    BREAK (305) 176 185
    CONTINUE (306) 177 186
    AS (307)
    IN (308) 241 242 243 244 245 246 247 248 249 250
    OUT (309)
    DATA (310)
    RETURN (311) 178 179 187 188
    TAILREC (312)
    OPERATOR (313)
    INLINE (314)
    NOINLINE (315)
    CROSSINLINE (316)
    REIFIED (317)
    EXPECT (318)
    INFIX (319)
    OPEN (320) 143
    FINAL (321) 142
    CONST (322)
    INT <Int_v> (323) 193
    FLOAT <Float_v> (324) 194
    DOUBLE <Double_v> (325) 196
    CHR <Char_v> (326) 195
    BOOLEAN <Bool_v> (327) 197
    ASUM (328) 228
    ASUB (329) 229
    ADIV (330) 230
    AMUL (331) 231
    AMOD (332) 232
    OR (333) 209
    AND (334) 210
    EQ (335) 211
    AEQ (336) 212
    NEQ (337) 213
    NAEQ (338) 214
    LOEQ (339) 215
    MOEQ (340) 216
    RANGE (341) 222
    UMINUS (342)
    UPLUS (343)


Nonterminals, with rules where they appear

    $accept (108)
        on left: 0
    program <programU> (109)
        on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
        on right: 0 13 14 15 16 17 18 19 20 21 22 23 24
    class <classU> (110)
        on left: 25 26 27 28 29 30 31 32
        on right: 3 13
    classBody <classBodyU> (111)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 25 26 27 28 40 41 42 43 44 45 46
    property <propertyU> (112)
        on left: 47 48 49 50
        on right: 36 37 41 42
    method <methodU> (113)
        on left: 51 52 53 54 55 56
        on right: 4 14 35 40
    initializer <initializerU> (114)
        on left: 57
        on right: 39 44
    constructor <constructorU> (115)
        on left: 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 38 43
    optFormalParams <formalParamsListU> (116)
        on left: 70 71
        on right: 58 59 60 61 62 63 64 65 66 67 68 69 146
    formalParams <formalParamsListU> (117)
        on left: 72 73
        on right: 71 73 155 158 244 245 246 249 250
    modifiers <modifiersU> (118)
        on left: 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137
        on right: 25 26 29 30 47 48 51 52 53
    visibilityModifier <visibilityModU> (119)
        on left: 138 139 140 141
        on right: 7 8 11 12 17 18 21 22 58 59 60 61 62 63 75 78 81 82 83 85 88 90 91 92 94 96 97 98 99 100 101 102 104 105 106 109 110 111 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137
    inheritanceModifier <inheritanceModU> (120)
        on left: 142 143
        on right: 76 79 82 84 85 86 89 90 92 93 95 96 98 99 100 102 103 104 105 106 107 108 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137
    func <funcU> (121)
        on left: 144 145
        on right: 53 56
    funcDeclaration <funcDeclU> (122)
        on left: 146
        on right: 51 52 54 55 144 145
    block <stmtListU> (123)
        on left: 147 148 149 150 151 152
        on right: 57 58 62 63 64 68 69 144 234 236 239 242 245 247 249 253 256 258 259 260 261 264 266 268 269 270 271 274
    varDeclaration <varOrValDeclU> (124)
        on left: 153 154 155
        on right: 6 8 10 12 16 18 20 22 48 50 169 181
    valDeclaration <varOrValDeclU> (125)
        on left: 156 157 158
        on right: 5 7 9 11 15 17 19 21 47 49 168 180
    type <typeU> (126)
        on left: 159 160
        on right: 72 73 146 153 154 156 157 241 242 243 247 248
    templateType <templateTypeU> (127)
        on left: 161
        on right: 160 163 165
    type_seq <typesListU> (128)
        on left: 162 163 164 165
        on right: 161 164 165
    stmts <stmtListU> (129)
        on left: 166 167
        on right: 147 149 150 167
    stmt <stmtU> (130)
        on left: 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187 188
        on right: 166 167 233 241 244 251 254 255 256 257 259 263 267 269 273
    expr <exprU> (131)
        on left: 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222
        on right: 145 154 155 157 158 175 179 184 188 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 222 225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256 257 258 259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274
    optFactParams <factParamsListU> (132)
        on left: 223 224
        on right: 60 61 62 63 66 67 68 69 192 218 221
    factParams <factParamsListU> (133)
        on left: 225 226
        on right: 224 226
    assignment <assignmentU> (134)
        on left: 227 228 229 230 231 232
        on right: 170 182
    whileLoop <whileLoopU> (135)
        on left: 233 234 235 236 237
        on right: 171
    doWhileLoop <whileLoopU> (136)
        on left: 238 239 240
        on right: 172 183
    forLoop <forLoopU> (137)
        on left: 241 242 243 244 245 246 247 248 249 250
        on right: 173
    ifStmt <ifStmtU> (138)
        on left: 251 252 253 254 255 256 257 258 259 260 261 262 263 264 265 266 267 268 269 270 271 272 273 274
        on right: 174
    optNewLines (139)
        on left: 275 276
        on right: 147 148 149 150 151 152 159 160
    newLines (140)
        on left: 277 278
        on right: 2 9 10 11 12 19 20 21 22 24 34 37 42 46 52 55 150 151 180 181 182 183 184 185 186 187 188 236 237 247 248 249 250 265 266 267 268 269 270 271 272 273 274 276 278 281
    semis (141)
        on left: 279 280 281
        on right: 1 5 6 7 8 15 16 17 18 23 33 36 41 45 51 54 147 148 168 169 170 172 175 176 177 178 179 234 235 242 243 245 246 252 253 257 258 259 260 261 262 263 264 280 281


State 0

    0 $accept: . program $end

    NEW_LINE   shift, and go to state 1
    CLASS      shift, and go to state 2
    PUBLIC     shift, and go to state 3
    PRIVATE    shift, and go to state 4
    PROTECTED  shift, and go to state 5
    INTERNAL   shift, and go to state 6
    OVERRIDE   shift, and go to state 7
    ABSTRACT   shift, and go to state 8
    FUN        shift, and go to state 9
    VAR        shift, and go to state 10
    VAL        shift, and go to state 11
    OPEN       shift, and go to state 12
    FINAL      shift, and go to state 13
    ';'        shift, and go to state 14

    program              go to state 15
    class                go to state 16
    method               go to state 17
    modifiers            go to state 18
    visibilityModifier   go to state 19
    inheritanceModifier  go to state 20
    func                 go to state 21
    funcDeclaration      go to state 22
    varDeclaration       go to state 23
    valDeclaration       go to state 24
    newLines             go to state 25
    semis                go to state 26


State 1

  277 newLines: NEW_LINE .

    $default  reduce using rule 277 (newLines)


State 2

   27 class: CLASS . ID ':' ID '{' classBody '}'
   28      | CLASS . ID '{' classBody '}'
   31      | CLASS . ID ':' ID '{' '}'
   32      | CLASS . ID '{' '}'

    ID  shift, and go to state 27


State 3

  138 visibilityModifier: PUBLIC .

    $default  reduce using rule 138 (visibilityModifier)


State 4

  139 visibilityModifier: PRIVATE .

    $default  reduce using rule 139 (visibilityModifier)


State 5

  141 visibilityModifier: PROTECTED .

    $default  reduce using rule 141 (visibilityModifier)


State 6

  140 visibilityModifier: INTERNAL .

    $default  reduce using rule 140 (visibilityModifier)


State 7

   74 modifiers: OVERRIDE .
   78          | OVERRIDE . visibilityModifier
   79          | OVERRIDE . inheritanceModifier
   80          | OVERRIDE . ABSTRACT
   90          | OVERRIDE . visibilityModifier inheritanceModifier
   91          | OVERRIDE . visibilityModifier ABSTRACT
   92          | OVERRIDE . inheritanceModifier visibilityModifier
   93          | OVERRIDE . inheritanceModifier ABSTRACT
   94          | OVERRIDE . ABSTRACT visibilityModifier
   95          | OVERRIDE . ABSTRACT inheritanceModifier
  114          | OVERRIDE . visibilityModifier inheritanceModifier ABSTRACT
  115          | OVERRIDE . visibilityModifier ABSTRACT inheritanceModifier
  116          | OVERRIDE . inheritanceModifier visibilityModifier ABSTRACT
  117          | OVERRIDE . inheritanceModifier ABSTRACT visibilityModifier
  118          | OVERRIDE . ABSTRACT visibilityModifier inheritanceModifier
  119          | OVERRIDE . ABSTRACT inheritanceModifier visibilityModifier

    PUBLIC     shift, and go to state 3
    PRIVATE    shift, and go to state 4
    PROTECTED  shift, and go to state 5
    INTERNAL   shift, and go to state 6
    ABSTRACT   shift, and go to state 28
    OPEN       shift, and go to state 12
    FINAL      shift, and go to state 13

    $default  reduce using rule 74 (modifiers)

    visibilityModifier   go to state 29
    inheritanceModifier  go to state 30


State 8

   77 modifiers: ABSTRACT .
   87          | ABSTRACT . OVERRIDE
   88          | ABSTRACT . visibilityModifier
   89          | ABSTRACT . inheritanceModifier
  108          | ABSTRACT . OVERRIDE inheritanceModifier
  109          | ABSTRACT . OVERRIDE visibilityModifier
  110          | ABSTRACT . visibilityModifier OVERRIDE
  111          | ABSTRACT . visibilityModifier inheritanceModifier
  112          | ABSTRACT . inheritanceModifier OVERRIDE
  113          | ABSTRACT . inheritanceModifier visibilityModifier
  132          | ABSTRACT . OVERRIDE inheritanceModifier visibilityModifier
  133          | ABSTRACT . OVERRIDE visibilityModifier inheritanceModifier
  134          | ABSTRACT . visibilityModifier OVERRIDE inheritanceModifier
  135          | ABSTRACT . visibilityModifier inheritanceModifier OVERRIDE
  136          | ABSTRACT . inheritanceModifier OVERRIDE visibilityModifier
  137          | ABSTRACT . inheritanceModifier visibilityModifier OVERRIDE

    PUBLIC     shift, and go to state 3
    PRIVATE    shift, and go to state 4
    PROTECTED  shift, and go to state 5
    INTERNAL   shift, and go to state 6
    OVERRIDE   shift, and go to state 31
    OPEN       shift, and go to state 12
    FINAL      shift, and go to state 13

    $default  reduce using rule 77 (modifiers)

    visibilityModifier   go to state 32
    inheritanceModifier  go to state 33


State 9

  146 funcDeclaration: FUN . ID '(' optFormalParams ')' ':' type

    ID  shift, and go to state 34


State 10

  153 varDeclaration: VAR . ID ':' type
  154               | VAR . ID ':' type '=' expr
  155               | VAR . '(' formalParams ')' '=' expr

    ID   shift, and go to state 35
    '('  shift, and go to state 36


State 11

  156 valDeclaration: VAL . ID ':' type
  157               | VAL . ID ':' type '=' expr
  158               | VAL . '(' formalParams ')' '=' expr

    ID   shift, and go to state 37
    '('  shift, and go to state 38


State 12

  143 inheritanceModifier: OPEN .

    $default  reduce using rule 143 (inheritanceModifier)


State 13

  142 inheritanceModifier: FINAL .

    $default  reduce using rule 142 (inheritanceModifier)


State 14

  279 semis: ';' .

    $default  reduce using rule 279 (semis)


State 15

    0 $accept: program . $end
   13 program: program . class
   14        | program . method
   15        | program . valDeclaration semis
   16        | program . varDeclaration semis
   17        | program . visibilityModifier valDeclaration semis
   18        | program . visibilityModifier varDeclaration semis
   19        | program . valDeclaration newLines
   20        | program . varDeclaration newLines
   21        | program . visibilityModifier valDeclaration newLines
   22        | program . visibilityModifier varDeclaration newLines
   23        | program . semis
   24        | program . newLines

    $end       shift, and go to state 39
    NEW_LINE   shift, and go to state 1
    CLASS      shift, and go to state 2
    PUBLIC     shift, and go to state 3
    PRIVATE    shift, and go to state 4
    PROTECTED  shift, and go to state 5
    INTERNAL   shift, and go to state 6
    OVERRIDE   shift, and go to state 7
    ABSTRACT   shift, and go to state 8
    FUN        shift, and go to state 9
    VAR        shift, and go to state 10
    VAL        shift, and go to state 11
    OPEN       shift, and go to state 12
    FINAL      shift, and go to state 13
    ';'        shift, and go to state 14

    class                go to state 40
    method               go to state 41
    modifiers            go to state 18
    visibilityModifier   go to state 42
    inheritanceModifier  go to state 20
    func                 go to state 21
    funcDeclaration      go to state 22
    varDeclaration       go to state 43
    valDeclaration       go to state 44
    newLines             go to state 45
    semis                go to state 46


State 16

    3 program: class .

    $default  reduce using rule 3 (program)


State 17

    4 program: method .

    $default  reduce using rule 4 (program)


State 18

   25 class: modifiers . CLASS ID ':' ID '{' classBody '}'
   26      | modifiers . CLASS ID '{' classBody '}'
   29      | modifiers . CLASS ID ':' ID '{' '}'
   30      | modifiers . CLASS ID '{' '}'
   51 method: modifiers . funcDeclaration semis
   52       | modifiers . funcDeclaration newLines
   53       | modifiers . func

    CLASS  shift, and go to state 47
    FUN    shift, and go to state 9

    func             go to state 48
    funcDeclaration  go to state 49


State 19

    7 program: visibilityModifier . valDeclaration semis
    8        | visibilityModifier . varDeclaration semis
   11        | visibilityModifier . valDeclaration newLines
   12        | visibilityModifier . varDeclaration newLines
   75 modifiers: visibilityModifier .
   81          | visibilityModifier . OVERRIDE
   82          | visibilityModifier . inheritanceModifier
   83          | visibilityModifier . ABSTRACT
   96          | visibilityModifier . OVERRIDE inheritanceModifier
   97          | visibilityModifier . OVERRIDE ABSTRACT
   98          | visibilityModifier . inheritanceModifier OVERRIDE
   99          | visibilityModifier . inheritanceModifier ABSTRACT
  100          | visibilityModifier . ABSTRACT inheritanceModifier
  101          | visibilityModifier . ABSTRACT OVERRIDE
  120          | visibilityModifier . OVERRIDE inheritanceModifier ABSTRACT
  121          | visibilityModifier . OVERRIDE ABSTRACT inheritanceModifier
  122          | visibilityModifier . inheritanceModifier OVERRIDE ABSTRACT
  123          | visibilityModifier . inheritanceModifier ABSTRACT OVERRIDE
  124          | visibilityModifier . ABSTRACT inheritanceModifier OVERRIDE
  125          | visibilityModifier . ABSTRACT OVERRIDE inheritanceModifier

    OVERRIDE  shift, and go to state 50
    ABSTRACT  shift, and go to state 51
    VAR       shift, and go to state 10
    VAL       shift, and go to state 11
    OPEN      shift, and go to state 12
    FINAL     shift, and go to state 13

    $default  reduce using rule 75 (modifiers)
